--- a/TBA/Info.plist
+++ b/TBA/Info.plist
@@ -25,9 +25,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-
-	<string>FirebaseTest</string>
-
+	<string>BONLogin</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
